split classes to single files
to simplify cooperation work.
Don't forget to merge code to a common file before
release!!!!!!!!!!!!!!!!!

--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Bomb</title>
-	<script type="text/javascript" src="js/bomb.js"></script>
+	<title>Bomb</title>	
 	<link rel="stylesheet" type="text/css" href="css/bomb.css">
 </head>
 <body>
-
+	<script type="text/javascript" src="js/PlayFieldClass.js"></script>
+	<script type="text/javascript" src="js/PlayerClass.js"></script>
+	<script type="text/javascript" src="js/GameClass.js"></script>
+	<script type="text/javascript" src="js/RoundClass.js"></script>
+	<script type="text/javascript" src="js/WeaponClass.js"></script>
+	<script type="text/javascript" src="js/bomb.js"></script>
 </body>
 </html>
